# bot-geop

./: .gitignore  bot.py  courses.txt  db.py  main.py  main3.py  pyproject.toml  register.py  userFile.txt  utils.py
old/: main2.py  name2  tmep
