[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
telebot = "^0.0.4"
telepot = "^12.7"
colorama = "^0.4.6"
termcolor = "^2.1.0"
schedule = "^1.1.0"
telegram = "^0.0.1"
google-api-python-client = "^2.77.0"
xds-protos = "^0.0.11"
google-auth-oauthlib = "^1.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"